--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-electron-sqlite3",
+  "name": "dk-led-hangang-electron",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,12 +13,26 @@
   },
   "main": "background.js",
   "dependencies": {
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-winston": "^4.0.5",
+    "iconv-lite": "^0.6.2",
+    "lodash": "^4.17.20",
+    "md5": "^2.3.0",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "knex": "^0.95.6",
     "sqlite3": "^5.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"    
+    "vuetify": "^2.4.0",
+    "vuex": "^3.4.0",
+    "serialport": "^9.2.0",
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -32,8 +46,11 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
     "vue-cli-plugin-electron-builder": "~2.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-vuetify": "~2.4.1",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   }
 }
